完善后的提交

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -340,7 +340,15 @@
 
     <!--主色调红 -->
     <color name="title_layout_red">#D53C32</color>
-    <!--主色调红 -->
+    <!--主色调黑 -->
     <color name="title_layout_black">#666666</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="viewfinder_laser">#ffff0000</color>
+    <color name="viewfinder_mask">#60000000</color>
+    <color name="possible_result_points">#c0ffff00</color>
+    <color name="result_points">#c000ff00</color>
+    <color name="result_text">#ffffffff</color>
+    <color name="result_view">#b0000000</color>
 
 </resources>
