--- a/app/src/main/res/layout/fragment_shopcar.xml
+++ b/app/src/main/res/layout/fragment_shopcar.xml
@@ -67,6 +67,7 @@
             android:text="¥4488" />
 
         <TextView
+            android:id="@+id/txt_jiesuan"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:background="@color/title_layout_red"
