修改了些样式

--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/list_order_list_data"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:listSelector="@color/white"
+        android:listSelector="@android:color/transparent"
         android:background="@color/color_emputy_grey"
         android:scrollbars="none" />
 
