--- a/app/src/main/res/layout/activity_confim_order.xml
+++ b/app/src/main/res/layout/activity_confim_order.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
         android:background="@color/color_emputy_grey"
-        android:listSelector="@color/white"
+        android:listSelector="@android:color/transparent"
         android:scrollbars="none" />
 
     <View
