--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/list_message_list_data"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:listSelector="@color/white"
+        android:listSelector="@android:color/transparent"
         android:background="@color/color_emputy_grey"
         android:scrollbars="none" />
 
