--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="#F4F4F4"
     android:layout_height="match_parent">
 
     <include layout="@layout/title_layout"></include>
@@ -8,87 +9,94 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/img_header_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/ic_launcher"/>
+            android:layout_marginTop="10dp"
+            android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="16sp"
             android:layout_marginTop="5dp"
-            android:text="大张伟"/>
+            android:text="大张伟"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/title_layout_red"
                 android:drawableLeft="@drawable/img_home_telphone"
-                android:layout_marginLeft="10dp"
-                android:text="15252525252"/>
+                android:text="15252525252"
+                android:textColor="@color/title_layout_red"
+                android:textSize="15sp" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1.0"/>
+                android:layout_weight="1.0" />
 
             <TextView
+                android:id="@+id/txt_zhanghuyue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/title_layout_red"
                 android:drawableLeft="@drawable/img_home_telphone"
-                android:layout_marginRight="10dp"
-                android:text="账户余额：¥200"/>
+                android:text="账户余额：¥200"
+                android:textColor="@color/title_layout_red"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="15dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/title_layout_black"
                 android:drawableLeft="@drawable/img_home_location"
-                android:layout_marginLeft="10dp"
-                android:text="地址：北京市朝阳区酒仙桥"/>
+                android:text="地址：北京市朝阳区酒仙桥"
+                android:textColor="@color/title_layout_black"
+                android:textSize="15sp" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1.0"/>
+                android:layout_weight="1.0" />
 
             <TextView
                 android:id="@+id/txt_alert_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="5dp"
+                android:text="修改"
                 android:textColor="@color/title_layout_black"
-                android:layout_marginRight="10dp"
-                android:text="修改"/>
+                android:textSize="15sp" />
 
         </LinearLayout>
 
     </LinearLayout>
+
 
     <com.huilianonline.yxk.view.refresh.NoScrollGridView
         android:id="@+id/gridview_mine"
@@ -99,6 +107,7 @@
         android:numColumns="3"
         android:scrollbars="none"
         android:stretchMode="columnWidth"
+        android:layout_marginTop="15dp"
         android:verticalSpacing="0.0dip">
     </com.huilianonline.yxk.view.refresh.NoScrollGridView>
 
