--- a/app/src/main/res/layout/fragment_shopcar.xml
+++ b/app/src/main/res/layout/fragment_shopcar.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/title_layout"></include>
@@ -12,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1.0"
         android:background="@color/color_emputy_grey"
-        android:listSelector="@color/white"
+        android:listSelector="@android:color/transparent"
         android:scrollbars="none" />
 
     <View
