--- a/app/src/main/res/layout/item_home_data.xml
+++ b/app/src/main/res/layout/item_home_data.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="90dp">
+        android:layout_height="100dp">
 
     <LinearLayout
         android:layout_width="match_parent"
