--- a/app/src/main/res/layout/title_layout_class.xml
+++ b/app/src/main/res/layout/title_layout_class.xml
@@ -5,7 +5,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:background="@color/title_layout_red"
         android:layout_gravity="center"
         android:orientation="horizontal">
@@ -25,7 +25,8 @@
             android:id="@+id/img_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="45dp"
             android:src="@drawable/img_class_search"
             />
 
