--- a/app/src/main/res/layout/item_confirm_order_list.xml
+++ b/app/src/main/res/layout/item_confirm_order_list.xml
@@ -20,7 +20,7 @@
                 android:layout_marginLeft="10dp"
                 android:contentDescription="@null"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/shape_pic_loaderr_bg" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
