--- a/app/src/main/res/layout/item_message_data.xml
+++ b/app/src/main/res/layout/item_message_data.xml
@@ -37,7 +37,7 @@
             android:contentDescription="@null"
             android:scaleType="fitCenter"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/shape_pic_loaderr_bg" />
 
         <LinearLayout
             android:layout_width="match_parent"
