--- a/app/src/main/res/layout/item_shopcar_data.xml
+++ b/app/src/main/res/layout/item_shopcar_data.xml
@@ -23,7 +23,7 @@
             android:layout_height="64dp"
             android:contentDescription="@null"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/shape_pic_loaderr_bg" />
 
         <LinearLayout
             android:layout_width="match_parent"
