--- a/app/src/main/res/layout/header_home_shop.xml
+++ b/app/src/main/res/layout/header_home_shop.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/img_user_icon" />
 
         <TextView
+            android:id="@+id/txt_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -34,6 +35,7 @@
             android:layout_marginTop="10dp">
 
             <TextView
+                android:id="@+id/txt_user_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -69,6 +71,7 @@
             android:layout_marginTop="20dp">
 
             <TextView
+                android:id="@+id/txt_user_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
