--- a/app/src/main/res/layout/header_home_shop.xml
+++ b/app/src/main/res/layout/header_home_shop.xml
@@ -135,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:text="限时抢购专区"
+            android:text="限时限量抢购专区"
             android:textColor="@color/title_layout_red"
             android:textSize="16sp" />
 
