--- a/app/src/main/res/layout/item_home_data.xml
+++ b/app/src/main/res/layout/item_home_data.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="100dp">
+        android:layout_height="120dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:textColor="@color/title_layout_black"
                 android:textSize="16sp" />
 
             <TextView
@@ -43,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text=""
-                android:textColor="@color/title_layout_black"
+                android:textColor="@color/color_erji_content"
                 android:textSize="14sp" />
 
             <LinearLayout
@@ -65,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:text=""
-                    android:textColor="@color/title_layout_black"
+                    android:textColor="@color/color_erji_content"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -77,8 +78,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/title_layout_black"
+                    android:text="距离结束还有"
+                    android:textColor="@color/color_erji_content"
                     android:textSize="14sp" />
 
                 <TextView
